--- a/server/package.json
+++ b/server/package.json
@@ -16,13 +16,13 @@
     "@fastify/multipart": "6.0.0",
     "@fastify/oauth2": "5.0.0",
     "@prisma/client": "5.18.0",
-    "axios": "1.7.4",
     "bcrypt": "5.1.1",
     "cloudinary": "2.4.0",
+    "colors": "1.4.0",
     "dotenv": "16.4.5",
-    "fastify-multipart": "5.4.0",
     "fastify-oauth2": "4.6.0",
-    "fastify-secure-session": "3.2.0"
+    "fastify-secure-session": "3.2.0",
+    "node-cron": "3.0.3"
   },
   "devDependencies": {
     "@fastify/cookie": "6.0.0",
@@ -30,9 +30,10 @@
     "@fastify/swagger-ui": "4.0.1",
     "@tsconfig/node20": "20.1.4",
     "@types/bcrypt": "5.0.2",
+    "@types/colors": "1.2.1",
     "@types/jsonwebtoken": "9.0.6",
     "@types/node": "20.14.12",
-    "fastify-cookie": "5.7.0",
+    "@types/node-cron": "3.0.11",
     "fastify-type-provider-zod": "2.0.0",
     "jsonwebtoken": "9.0.2",
     "prisma": "5.18.0",
