--- a/web/package.json
+++ b/web/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clsx": "2.1.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "5.3.0",
+    "tailwind-variants": "0.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/node": "22.4.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
