[feat] Update strict requests

--- a/server/.env.example
+++ b/server/.env.example
@@ -15,4 +15,7 @@ COOKIE_MAX_AGE="1500000"
 BACKEND_URL="http://localhost:3000"
 FRONTEND_URL="http://localhost:3333"
 
+ENV="dev | production"
 PORT="3000"
+
+DOMAIN="localhost | .frontierrp.com.br"
