--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "5.3.0",
-    "tailwind-variants": "0.2.1"
+    "tailwind-variants": "0.2.1",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
