--- a/web/package.json
+++ b/web/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "clsx": "2.1.1",
+    "formik": "2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "5.3.0",
     "react-router-dom": "6.26.1",
     "tailwind-variants": "0.2.1",
-    "zod": "3.23.8"
+    "zod": "3.23.8",
+    "zod-formik-adapter": "1.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
